--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <h2>Future</h2>
           <p>
             There are many variations of passages of Lorem Ipsum available, but
-            the majority have suffered alteration in some form, by injected
+            the majority have suffereda alteration in some form, by injected
             humour, or randomised words
           </p>
           <p>Email: ataullahm100@gmail.com</p>
