--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
   </head>
   <body>
     <header>
+      <div class="version">
+        <p><a href="./version2.html">Version 2.0</a></p>
+        <p><a href="./version3.html">Version 3.0</a></p>
+      </div>
       <div id="header_container">
         <div></div>
         <div>
