--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Future Plan</title>
+    <link
+      rel="shortcut icon"
+      href="./images/icons/web.png"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./style/style.css" />
     <link
       rel="stylesheet"
